sandc/test/fixtures/pbtRegression/shouldSucceed/aliases/Foo.sand
package com.foo;

pub class Foo {
    
}