sandc/test/fixtures/pbtRegression/shouldFail/implicitShadowing/staticMethodCopy/Copy.sand
pub class Copy {
    copy sand.lang.String;
}